added divs and sections on html files

--- a/mental.html
+++ b/mental.html
@@ -12,6 +12,27 @@
 
   </header>
   <main>
+    <div>
+      <div class="">
+        <section>
+          <p>
+          </p>
+        </section>
+      </div>
+      <div class="">
+        <section>
+          <p>
+          </p>
+        </section>
+      </div>
+      <div class="">
+        <section>
+          <p>
+          </p>
+        </section>
+      </div>
+
+    </div>
 
   </main>
   <footer>
@@ -20,3 +41,10 @@
 </body>
 <script src="/js/app.js"></script>
 </html>
+
+
+<!-- we need a container with a ID that we can append the contain to inside our bubble shape animation
+we need 3 containers, one for each little bubble 
+we need within each container: ellipse, 
+secondary container to append text and images 
+ -->
