--- a/aboutus.html
+++ b/aboutus.html
@@ -12,6 +12,38 @@
 
   </header>
   <main>
+    <div>
+      <div class="">
+        <section>
+          <p>
+          </p>
+        </section>
+      </div>
+      <div class="">
+        <section>
+          <p>
+          </p>
+        </section>
+      </div>
+      <div class="">
+        <section>
+          <p>
+          </p>
+        </section>
+      </div>
+      <div class="">
+        <section>
+          <p>
+          </p>
+        </section>
+      </div>
+      <div class="">
+        <section>
+          <p>
+          </p>
+        </section>
+      </div>
+    </div>
 
   </main>
   <footer>
