--- a/index.html
+++ b/index.html
@@ -12,6 +12,48 @@
 
   </header>
   <main>
+    <div class="">
+      <section>
+        <p>
+        </p>
+      </section>
+    </div>
+    <div class="">
+      <section>
+        <p>
+        </p>
+      </section>
+    </div>
+    <div class="">
+      <section>
+        <p>
+        </p>
+      </section>
+    </div>
+    <div class="">
+      <section>
+        <p>
+        </p>
+      </section>
+    </div>
+    <div class="">
+      <section>
+        <p>
+        </p>
+      </section>
+    </div>
+    <div class="">
+      <section>
+        <p>
+        </p>
+      </section>
+    </div>
+    <div class="">
+      <section>
+        <p>
+        </p>
+      </section>
+    </div>
 
   </main>
   <footer>
