--- a/nutrition.html
+++ b/nutrition.html
@@ -12,6 +12,27 @@
 
   </header>
   <main>
+    <div>
+      <div class="">
+        <section>
+          <p>
+          </p>
+        </section>
+      </div>
+      <div class="">
+        <section>
+          <p>
+          </p>
+        </section>
+      </div>
+      <div class="">
+        <section>
+          <p>
+          </p>
+        </section>
+      </div>
+
+    </div>
 
   </main>
   <footer>
