--- a/physical.html
+++ b/physical.html
@@ -12,6 +12,26 @@
 
   </header>
   <main>
+    <div>
+      <div class="">
+        <section>
+          <p>
+          </p>
+        </section>
+      </div>
+      <div class="">
+        <section>
+          <p>
+          </p>
+        </section>
+      </div>
+      <div class="">
+        <section>
+          <p>
+          </p>
+        </section>
+      </div>
+    </div>
 
   </main>
   <footer>
