began to practice with formatting a layout

--- a/index.html
+++ b/index.html
@@ -1,64 +1,67 @@
 <!DOCTYPE html>
 <html lang="en-US">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/reset.css" type="text/css"/>
-  <link rel="stylesheet" href="/css/style.css" type="text/css"/>
+  <link rel="stylesheet" href="/css/reset.css" type="text/css" />
+  <link rel="stylesheet" href="/css/style.css" type="text/css" />
   <title></title>
 </head>
+
 <body>
   <header>
 
   </header>
   <main>
-    <div class="">
-      <section>
-        <p>
-        </p>
-      </section>
-    </div>
-    <div class="">
-      <section>
-        <p>
-        </p>
-      </section>
-    </div>
-    <div class="">
-      <section>
-        <p>
-        </p>
-      </section>
-    </div>
-    <div class="">
-      <section>
-        <p>
-        </p>
-      </section>
-    </div>
-    <div class="">
-      <section>
-        <p>
-        </p>
-      </section>
-    </div>
-    <div class="">
-      <section>
-        <p>
-        </p>
-      </section>
-    </div>
-    <div class="">
-      <section>
-        <p>
-        </p>
-      </section>
-    </div>
+    <div id="allCirclesContainer">
+      <div id="physical" class="circle physical">
+        <section>
+          <p class="physical">Physical</p>
+        </section>
+      </div>
 
+      <div id="quote" class="circle">
+        <section>
+          <p> Fun quote</p>
+        </section>
+      </div>
+
+      <div id="nutrition" class="circle">
+        <section>
+          <p>Nutrition</p>
+        </section>
+      </div>
+
+      <div id="mental" class="circle">
+        <section>
+          <p>Mental Health</p>
+        </section>
+      </div>
+
+      <div id="random" class="circle">
+        <section>
+          <p>Random Task Generator</p>
+        </section>
+      </div>
+
+      <div id="aboutus" class="circle">
+        <section>
+          <p>About Us</p>
+        </section>
+      </div>
+
+      <div id="username" class="circle">
+        <section>
+          <p>Welcome Username</p>
+        </section>
+      </div>
+    </div>
   </main>
   <footer>
 
   </footer>
 </body>
 <script src="/js/app.js"></script>
+
 </html>
