working with formatting text inside of circles

--- a/index.html
+++ b/index.html
@@ -13,55 +13,67 @@
   <header>
 
   </header>
-  <main>
+
+  <main id="form">
+
     <div id="allCirclesContainer">
-      <div id="physical" class="circle physical">
+
+      <div id="body" class="circle">
         <section>
-          <p class="physical">Physical</p>
+          <p>Body</p>
         </section>
       </div>
 
-      <div id="quote" class="circle">
-        <section>
-          <p> Fun quote</p>
+      <div>
+        <section id="quote" class="circle">
+          <p class="pQuote"> <br> <br> Lorem, ipsum dolor sit ame consectetur adipisicing elit. Tenetur quis
+            molestias
+            iure
+            in ame consectetur adipisicing elit. Tenetur quis
+            molestias
+            iure
+            in ectetur adipisi
+          </p>
         </section>
       </div>
 
-      <div id="nutrition" class="circle">
+      <div id="nourish" class="circle">
         <section>
-          <p>Nutrition</p>
+          <p>Nourish</p>
         </section>
       </div>
 
-      <div id="mental" class="circle">
+      <div id="mind" class="circle">
         <section>
-          <p>Mental Health</p>
+          <p>Mind</p>
         </section>
       </div>
 
-      <div id="random" class="circle">
-        <section>
-          <p>Random Task Generator</p>
+      <div>
+        <section id="random" class="circle">
+          <p class="pRandom">Random</p>
         </section>
       </div>
 
-      <div id="aboutus" class="circle">
-        <section>
-          <p>About Us</p>
+      <div>
+        <section id="about" class="circle">
+          <p class="pAbout">About</p>
         </section>
       </div>
 
-      <div id="username" class="circle">
-        <section>
-          <p>Welcome Username</p>
+      <div>
+        <section id="username" class="circle">
+          <p class="">Welcome username</p>
         </section>
       </div>
+
     </div>
   </main>
+
   <footer>
 
   </footer>
+  <script src="/js/app.js"></script>
 </body>
-<script src="/js/app.js"></script>
 
 </html>
