working with formatting text inside of circles

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
       <div>
         <section id="username" class="circle">
-          <p class="">Welcome username</p>
+          <p class="pUsername">Welcome useadkjre</p>
         </section>
       </div>
 
