--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
       <div id="body" class="circle">
         <section>
-          <p>Body</p>
+          <p><a href="physical.html">Body</a></p>
         </section>
       </div>
 
@@ -39,13 +39,13 @@
 
       <div id="nourish" class="circle">
         <section>
-          <p>Nourish</p>
+          <p><a href="nutrition.html">Nourish</a></p>
         </section>
       </div>
 
       <div id="mind" class="circle">
         <section>
-          <p>Mind</p>
+          <p><a href="mental.html">Mind</a></p>
         </section>
       </div>
 
@@ -57,7 +57,7 @@
 
       <div>
         <section id="about" class="circle">
-          <p class="pAbout">About</p>
+          <p class="pAbout"><a href="aboutus.html">About</a></p>
         </section>
       </div>
 
@@ -73,7 +73,9 @@
   <footer>
 
   </footer>
-  <script src="/js/app.js"></script>
+  <script src="/objects/quotes.json"></script>
+  <script src="/js/main.js"></script>
+  <script src="/js/quotes.js"></script>
 </body>
 
 </html>
