--- a/mental.html
+++ b/mental.html
@@ -8,7 +8,7 @@
   <title></title>
 </head>
 <body>
-  <header>
+  <header class="activitypage" id="mental">
 
   </header>
   <main>
@@ -39,7 +39,9 @@
 
   </footer>
 </body>
-<script src="/js/app.js"></script>
+<script src="objects/mental.json"></script>
+<script src="/js/main.js"></script>
+<script src="/js/activity.js"></script>
 </html>
 
 
