--- a/physical.html
+++ b/physical.html
@@ -8,7 +8,7 @@
   <title></title>
 </head>
 <body>
-  <header>
+  <header class="activitypage" id="fitness">
 
   </header>
   <main>
@@ -38,5 +38,7 @@
 
   </footer>
 </body>
-<script src="/js/app.js"></script>
+<script src="objects/fitness.json"></script>
+<script src="/js/main.js"></script>
+<script src="/js/activity.js"></script>
 </html>
