put some html elements in aboutus.html. Created aboutus.css so we didn't have to write any changes to style.css right now.

--- a/aboutus.html
+++ b/aboutus.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/css/reset.css" type="text/css"/>
   <link rel="stylesheet" href="/css/style.css" type="text/css"/>
+  <link rel="stylesheet" href="/css/aboutus.css" type="text/css"/>
   <title></title>
 </head>
 <body>
@@ -13,34 +14,47 @@
   </header>
   <main>
     <div>
-      <div class="">
+      <div class="circle" id="Courtney">
         <section>
-          <p>
+          <img src="" alt="">
+          <h2>Courtney Smith</h2>
+          <p>words and stuff
           </p>
+          <a href="https://github.com/PUTYOURPROFILEHERE"></a>
         </section>
       </div>
-      <div class="">
+      <div class="circle" id="Edgar">
         <section>
-          <p>
+          <img src="" alt="">
+          <h2>Edgar Romero</h2>
+          <p>words and stuff
           </p>
+          <a href="https://github.com/PUTYOURPROFILEHERE"></a>
         </section>
       </div>
-      <div class="">
+      <div class="circle" id="Sarah">
         <section>
-          <p>
+          <img src="" alt="">
+          <h2>Sarah Shatto</h2>
+          <p>words and stuff
           </p>
+          <a href="https://github.com/PUTYOURPROFILEHERE"></a>
         </section>
       </div>
-      <div class="">
+      <div class="circle" id="Spencer">
         <section>
-          <p>
+          <img src="" alt="">
+          <h2>Spencer Rhodes</h2>
+          <p>words and stuff
           </p>
+          <a href="https://github.com/PUTYOURPROFILEHERE"></a>
         </section>
       </div>
-      <div class="">
+      <div class="circle" id="return-to-home">
         <section>
-          <p>
-          </p>
+          <a href="index.html">
+          <p>Return
+          </p></a>
         </section>
       </div>
     </div>
