added content to the mental page

--- a/mental.html
+++ b/mental.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/css/reset.css" type="text/css"/>
-  <link rel="stylesheet" href="/css/style.css" type="text/css"/>
+  <link rel="stylesheet" href="/css/mental.css" type="text/css"/>
   <title></title>
 </head>
 <body>
@@ -12,28 +12,9 @@
 
   </header>
   <main>
-    <div>
-      <div class="">
-        <section>
-          <p>
-          </p>
-        </section>
-      </div>
-      <div class="">
-        <section>
-          <p>
-          </p>
-        </section>
-      </div>
-      <div class="">
-        <section>
-          <p>
-          </p>
-        </section>
-      </div>
-
-    </div>
-
+     <div class="mental">Mental</div>
+     <div class="home"><a href="index.html">Home</a></div>
+     <div class="content" id="activity-container"></div>
   </main>
   <footer>
 
