text inside circles on body nourish and mental pages is centered in circle

--- a/aboutus.html
+++ b/aboutus.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en-US">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/reset.css" type="text/css"/>
-  <link rel="stylesheet" href="/css/style.css" type="text/css"/>
-  <link rel="stylesheet" href="/css/aboutus.css" type="text/css"/>
+  <link rel="stylesheet" href="/css/reset.css" type="text/css" />
+  <link rel="stylesheet" href="/css/style.css" type="text/css" />
+  <link rel="stylesheet" href="/css/aboutus.css" type="text/css" />
   <title></title>
 </head>
+
 <body>
   <header>
 
@@ -53,8 +55,9 @@
       <div class="circle" id="return-to-home">
         <section>
           <a href="index.html">
-          <p>Return
-          </p></a>
+            <p>Home
+            </p>
+          </a>
         </section>
       </div>
     </div>
@@ -65,4 +68,5 @@
   </footer>
 </body>
 <script src="/js/app.js"></script>
+
 </html>
