--- a/mental.html
+++ b/mental.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="en-US">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/reset.css" type="text/css"/>
-  <link rel="stylesheet" href="/css/mental.css" type="text/css"/>
+  <link rel="stylesheet" href="/css/reset.css" type="text/css" />
+  <link rel="stylesheet" href="/css/mental.css" type="text/css" />
   <title></title>
 </head>
+
 <body>
   <header class="activitypage" id="mental">
 
   </header>
   <main>
-     <div class="mental">Mental</div>
-     <div class="home"><a href="index.html">Home</a></div>
-     <div class="content" id="activity-container"></div>
+    <div class="mental">Mind</div>
+    <div class="home"><a href="index.html">Home</a></div>
+    <div class="content" id="activity-container"></div>
   </main>
   <footer>
 
@@ -23,6 +25,7 @@
 <script src="objects/mental.json"></script>
 <script src="/js/main.js"></script>
 <script src="/js/activity.js"></script>
+
 </html>
 
 
