--- a/index.html
+++ b/index.html
@@ -25,14 +25,9 @@
       </div>
 
       <div>
+        <!-- make sure there is the id called quote on element -->
         <section id="quote" class="circle">
-          <p class="pQuote"> <br> <br> Lorem, ipsum dolor sit ame consectetur adipisicing elit. Tenetur quis
-            molestias
-            iure
-            in ame consectetur adipisicing elit. Tenetur quis
-            molestias
-            iure
-            in ectetur adipisi
+          <p class="pQuote">
           </p>
         </section>
       </div>
