--- a/nutrition.html
+++ b/nutrition.html
@@ -1,39 +1,22 @@
 <!DOCTYPE html>
 <html lang="en-US">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/reset.css" type="text/css"/>
-  <link rel="stylesheet" href="/css/style.css" type="text/css"/>
+  <link rel="stylesheet" href="/css/reset.css" type="text/css" />
+  <link rel="stylesheet" href="/css/nourish.css" type="text/css" />
   <title></title>
 </head>
+
 <body>
   <header class="activitypage" id="nutrition">
 
   </header>
   <main>
-    <div>
-      <div class="">
-        <section>
-          <p>
-          </p>
-        </section>
-      </div>
-      <div class="">
-        <section>
-          <p>
-          </p>
-        </section>
-      </div>
-      <div class="">
-        <section>
-          <p>
-          </p>
-        </section>
-      </div>
-
-    </div>
-
+    <div class="nourish">Nourish</div>
+    <div class="home"><a href="index.html">Home</a></div>
+    <div class="content" id="activity-container"></div>
   </main>
   <footer>
 
@@ -42,4 +25,5 @@
 <script src="objects/nutrition.json"></script>
 <script src="/js/main.js"></script>
 <script src="/js/activity.js"></script>
+
 </html>
