--- a/physical.html
+++ b/physical.html
@@ -1,38 +1,23 @@
 <!DOCTYPE html>
 <html lang="en-US">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/reset.css" type="text/css"/>
-  <link rel="stylesheet" href="/css/style.css" type="text/css"/>
+  <link rel="stylesheet" href="/css/reset.css" type="text/css" />
+  <link rel="stylesheet" href="/css/body.css" type="text/css" />
   <title></title>
 </head>
+
 <body>
   <header class="activitypage" id="fitness">
 
   </header>
   <main>
-    <div>
-      <div class="">
-        <section>
-          <p>
-          </p>
-        </section>
-      </div>
-      <div class="">
-        <section>
-          <p>
-          </p>
-        </section>
-      </div>
-      <div class="">
-        <section>
-          <p>
-          </p>
-        </section>
-      </div>
-    </div>
-
+    <div class="body">Body</div>
+    <div class="home"><a href="index.html">Home</a></div>
+    <!-- id must not change for JS code  -->
+    <div class="content" id="activity-container"></div>
   </main>
   <footer>
 
@@ -41,4 +26,5 @@
 <script src="objects/fitness.json"></script>
 <script src="/js/main.js"></script>
 <script src="/js/activity.js"></script>
+
 </html>
