cleaned up html code - not needed elements

--- a/index.html
+++ b/index.html
@@ -6,68 +6,45 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/css/reset.css" type="text/css" />
   <link rel="stylesheet" href="/css/style.css" type="text/css" />
-  <title></title>
+  <title>15 Minutes</title>
 </head>
 
 <body>
-  <header>
-
-  </header>
-
   <main id="form">
 
     <div id="allCirclesContainer">
 
       <div id="body" class="circle">
-        <section>
-          <p><a href="physical.html">Body</a></p>
-        </section>
+        <p><a href="physical.html">Body</a></p>
       </div>
 
-      <div>
-        <!-- make sure there is the id called quote on element -->
-        <section id="quote" class="circle">
-          <p class="pQuote">
-          </p>
-        </section>
-      </div>
+      <!-- make sure there is the id called quote on element -->
+      <section id="quote" class="circle">
+        <p class="pQuote"></p>
+      </section>
 
       <div id="nourish" class="circle">
-        <section>
-          <p><a href="nutrition.html">Nourish</a></p>
-        </section>
+        <p><a href="nutrition.html">Nourish</a></p>
       </div>
 
       <div id="mind" class="circle">
-        <section>
-          <p><a href="mental.html">Mind</a></p>
-        </section>
+        <p><a href="mental.html">Mind</a></p>
       </div>
 
-      <div>
-        <section id="random" class="circle">
-          <p class="pRandom">Random</p>
-        </section>
-      </div>
+      <section id="random" class="circle">
+        <p class="pRandom">Random Generator</p>
+      </section>
 
-      <div>
-        <section id="about" class="circle">
-          <p class="pAbout"><a href="aboutus.html">About</a></p>
-        </section>
-      </div>
+      <section id="about" class="circle">
+        <p class="pAbout"><a href="aboutus.html">About</a></p>
+      </section>
 
-      <div>
-        <section id="username" class="circle">
-          <p class="pUsername">Welcome useadkjre</p>
-        </section>
-      </div>
+      <section id="username" class="circle">
+        <p class="pUsername">Welcome</p>
+      </section>
 
     </div>
   </main>
-
-  <footer>
-
-  </footer>
   <script src="/objects/quotes.json"></script>
   <script src="/js/main.js"></script>
   <script src="/js/quotes.js"></script>
