--- a/aboutus.html
+++ b/aboutus.html
@@ -5,67 +5,27 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/css/reset.css" type="text/css" />
-  <link rel="stylesheet" href="/css/style.css" type="text/css" />
   <link rel="stylesheet" href="/css/aboutus.css" type="text/css" />
   <title></title>
 </head>
 
 <body>
-  <header>
-
-  </header>
   <main>
-    <div>
-      <div class="circle" id="Courtney">
-        <section>
-          <img src="" alt="">
-          <h2>Courtney Smith</h2>
-          <p>words and stuff
-          </p>
-          <a href="https://github.com/PUTYOURPROFILEHERE"></a>
-        </section>
-      </div>
-      <div class="circle" id="Edgar">
-        <section>
-          <img src="" alt="">
-          <h2>Edgar Romero</h2>
-          <p>words and stuff
-          </p>
-          <a href="https://github.com/PUTYOURPROFILEHERE"></a>
-        </section>
-      </div>
-      <div class="circle" id="Sarah">
-        <section>
-          <img src="" alt="">
-          <h2>Sarah Shatto</h2>
-          <p>words and stuff
-          </p>
-          <a href="https://github.com/PUTYOURPROFILEHERE"></a>
-        </section>
-      </div>
-      <div class="circle" id="Spencer">
-        <section>
-          <img src="" alt="">
-          <h2>Spencer Rhodes</h2>
-          <p>words and stuff
-          </p>
-          <a href="https://github.com/PUTYOURPROFILEHERE"></a>
-        </section>
-      </div>
-      <div class="circle" id="return-to-home">
-        <section>
-          <a href="index.html">
-            <p>Home
-            </p>
-          </a>
-        </section>
-      </div>
+
+    <div class="formatCircle fade grow"><a class="" href="https://www.linkedin.com">Edgar</a></div>
+
+    <div class="formatCircle fade grow"><a class="" href="https://www.linkedin.com/in/courtneycodes/">Courtney</a>
     </div>
 
-  </main>
-  <footer>
+    <div class="formatCircle fade grow"><a class="" href="https://www.linkedin.com/in/sarahshatto/">Sarah</a>
+    </div>
 
-  </footer>
+    <div class="formatCircle fade grow"><a class=""
+        href="https://www.linkedin.com/in/spencer-rhodes-23588a80/">Spencer</a></div>
+
+    <div><a href="index.html" class="home fade grow">Home</a></div>
+
+  </main>
 </body>
 <script src="/js/app.js"></script>
 
