cleaned code; added transition/hover options for MVP

--- a/aboutus.html
+++ b/aboutus.html
@@ -6,12 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/css/reset.css" type="text/css" />
   <link rel="stylesheet" href="/css/aboutus.css" type="text/css" />
-  <title></title>
+  <title>Developers</title>
 </head>
 
 <body>
   <main>
+    <!-- Each div is a circle. The a tags hold text and links. -->
 
+
+
+    <!-- Edgar needs LinkedIn Link  -->
     <div class="formatCircle fade grow"><a class="" href="https://www.linkedin.com">Edgar</a></div>
 
     <div class="formatCircle fade grow"><a class="" href="https://www.linkedin.com/in/courtneycodes/">Courtney</a>
