--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div id="allCirclesContainer">
 
-      <div id="body" class="circle">
+      <div id="body" class="circle grow">
         <p><a href="physical.html">Body</a></p>
       </div>
 
@@ -23,11 +23,11 @@
         <p class="pQuote"></p>
       </section>
 
-      <div id="nourish" class="circle">
+      <div id="nourish" class="circle grow">
         <p><a href="nutrition.html">Nourish</a></p>
       </div>
 
-      <div id="mind" class="circle">
+      <div id="mind" class="circle grow">
         <p><a href="mental.html">Mind</a></p>
       </div>
 
@@ -35,7 +35,7 @@
         <p class="pRandom">Random Generator</p>
       </section>
 
-      <section id="about" class="circle">
+      <section id="about" class="circle grow">
         <p class="pAbout"><a href="aboutus.html">About</a></p>
       </section>
 
