--- a/physical.html
+++ b/physical.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/css/reset.css" type="text/css" />
   <link rel="stylesheet" href="/css/body.css" type="text/css" />
-  <title></title>
+  <title>Body</title>
 </head>
 
 <body>
@@ -16,7 +16,7 @@
   <main>
     <div class="body">Body</div>
     <div class="home"><a href="index.html">Home</a></div>
-    <!-- id must not change for JS code  -->
+    <!-- id name must not change for JS code  -->
     <div class="content" id="activity-container"></div>
   </main>
   <footer>
