--- a/mental.html
+++ b/mental.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/css/reset.css" type="text/css" />
   <link rel="stylesheet" href="/css/mental.css" type="text/css" />
-  <title></title>
+  <title>Mind</title>
 </head>
 
 <body>
