started to add the transition effects

--- a/aboutus.html
+++ b/aboutus.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/css/reset.css" type="text/css" />
   <link rel="stylesheet" href="/css/aboutus.css" type="text/css" />
+  <link rel="stylesheet" href="/css/transition.css" type="text/css" />
   <title>Developers</title>
 </head>
 
@@ -16,18 +17,18 @@
 
 
     <!-- Edgar needs LinkedIn Link  -->
-    <div class="formatCircle fade grow"><a class="" href="https://www.linkedin.com">Edgar</a></div>
+    <div class="formatCircle fade grow targetBubbles"><a class="" href="https://www.linkedin.com">Edgar</a></div>
 
-    <div class="formatCircle fade grow"><a class="" href="https://www.linkedin.com/in/courtneycodes/">Courtney</a>
+    <div class="formatCircle fade grow targetBubbles"><a class="" href="https://www.linkedin.com/in/courtneycodes/">Courtney</a>
     </div>
 
-    <div class="formatCircle fade grow"><a class="" href="https://www.linkedin.com/in/sarahshatto/">Sarah</a>
+    <div class="formatCircle fade grow targetBubbles"><a class="" href="https://www.linkedin.com/in/sarahshatto/">Sarah</a>
     </div>
 
-    <div class="formatCircle fade grow"><a class=""
+    <div class="formatCircle fade grow targetBubbles"><a class=""
         href="https://www.linkedin.com/in/spencer-rhodes-23588a80/">Spencer</a></div>
 
-    <div><a href="index.html" class="home fade grow">Home</a></div>
+    <div><a href="index.html" class="home fade grow targetBubbles">Home</a></div>
 
   </main>
 </body>
