--- a/nutrition.html
+++ b/nutrition.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/css/reset.css" type="text/css" />
   <link rel="stylesheet" href="/css/nourish.css" type="text/css" />
+  <link rel="stylesheet" href="/css/transition.css" type="text/css" />
   <title>Nutrition</title>
 </head>
 
@@ -15,8 +16,8 @@
   </header>
   <main>
     <div class="nourish">Nourish</div>
-    <div class="home"><a href="index.html">Home</a></div>
-    <div class="content" id="activity-container"></div>
+    <div class="home targetBubbles"><a href="index.html">Home</a></div>
+    <div class="content targetBubbles" id="activity-container"></div>
   </main>
   <footer>
 
