--- a/physical.html
+++ b/physical.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/css/reset.css" type="text/css" />
   <link rel="stylesheet" href="/css/body.css" type="text/css" />
+  <link rel="stylesheet" href="/css/transition.css" type="text/css" />
   <title>Body</title>
 </head>
 
@@ -15,9 +16,9 @@
   </header>
   <main>
     <div class="body">Body</div>
-    <div class="home"><a href="index.html">Home</a></div>
+    <div class="home targetBubbles"><a href="index.html">Home</a></div>
     <!-- id name must not change for JS code  -->
-    <div class="content" id="activity-container"></div>
+    <div class="content targetBubbles" id="activity-container"></div>
   </main>
   <footer>
 
