--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/css/reset.css" type="text/css" />
   <link rel="stylesheet" href="/css/style.css" type="text/css" />
+  <link rel="stylesheet" href="/css/transition.css" type="text/css" />
   <title>15 Minutes</title>
 </head>
 
@@ -14,32 +15,32 @@
 
     <div id="allCirclesContainer">
 
-      <div id="body" class="circle grow">
+      <div id="body" class="circle grow targetBubbles">
         <p><a href="physical.html">Body</a></p>
       </div>
 
       <!-- make sure there is the id called quote on element -->
-      <section id="quote" class="circle">
+      <section id="quote" class="circle targetBubbles">
         <p class="pQuote"></p>
       </section>
 
-      <div id="nourish" class="circle grow">
+      <div id="nourish" class="circle grow targetBubbles">
         <p><a href="nutrition.html">Nourish</a></p>
       </div>
 
-      <div id="mind" class="circle grow">
+      <div id="mind" class="circle grow targetBubbles">
         <p><a href="mental.html">Mind</a></p>
       </div>
 
-      <section id="random" class="circle">
+      <section id="random" class="circle targetBubbles">
         <p class="pRandom">Random Generator</p>
       </section>
 
-      <section id="about" class="circle grow">
+      <section id="about" class="circle grow targetBubbles">
         <p class="pAbout"><a href="aboutus.html">About</a></p>
       </section>
 
-      <section id="username" class="circle">
+      <section id="username" class="circle targetBubbles">
         <p class="pUsername">Welcome</p>
       </section>
 
