--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </div>
 
       <!-- make sure there is the id called quote on element -->
-      <section id="quote" class="circle targetBubbles">
+      <section id="quote" class="circle grow targetBubbles">
         <p class="pQuote"></p>
       </section>
 
@@ -32,7 +32,7 @@
         <p><a href="mental.html">Mind</a></p>
       </div>
 
-      <section id="random" class="circle targetBubbles">
+      <section id="random" class="circle grow  targetBubbles">
         <p class="pRandom">Random Generator</p>
       </section>
 
@@ -40,7 +40,7 @@
         <p class="pAbout"><a href="aboutus.html">About</a></p>
       </section>
 
-      <section id="username" class="circle targetBubbles">
+      <section id="username" class="circle grow  targetBubbles">
         <p class="pUsername">Welcome</p>
       </section>
 
