fit paragraph inside bubbles

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 
       <!-- make sure there is the id called quote on element -->
       <section id="quote" class="circle grow targetBubbles">
-        <p class="pQuote"></p>
+        <!-- we must have this p tag for javascript quote attaches here -->
+        <p></p>
       </section>
 
       <div id="nourish" class="circle grow targetBubbles">
