added bubble background. fixed page transition bug

--- a/aboutus.html
+++ b/aboutus.html
@@ -19,10 +19,12 @@
     <!-- Edgar needs LinkedIn Link  -->
     <div class="formatCircle fade grow targetBubbles"><a class="" href="https://www.linkedin.com">Edgar</a></div>
 
-    <div class="formatCircle fade grow targetBubbles"><a class="" href="https://www.linkedin.com/in/courtneycodes/">Courtney</a>
+    <div class="formatCircle fade grow targetBubbles"><a class=""
+        href="https://www.linkedin.com/in/courtneycodes/">Courtney</a>
     </div>
 
-    <div class="formatCircle fade grow targetBubbles"><a class="" href="https://www.linkedin.com/in/sarahshatto/">Sarah</a>
+    <div class="formatCircle fade grow targetBubbles"><a class=""
+        href="https://www.linkedin.com/in/sarahshatto/">Sarah</a>
     </div>
 
     <div class="formatCircle fade grow targetBubbles"><a class=""
