--- a/index.html
+++ b/index.html
@@ -15,33 +15,33 @@
 
     <div id="allCirclesContainer">
 
-      <div id="body" class="circle grow targetBubbles">
+      <div id="body" class="circle grow targetBubbles img">
         <p><a href="physical.html">Body</a></p>
       </div>
 
       <!-- make sure there is the id called quote on element -->
-      <section id="quote" class="circle grow targetBubbles">
+      <section id="quote" class="circle grow targetBubbles img">
         <!-- we must have this p tag for javascript quote attaches here -->
         <p></p>
       </section>
 
-      <div id="nourish" class="circle grow targetBubbles">
+      <div id="nourish" class="circle grow targetBubbles img">
         <p><a href="nutrition.html">Nourish</a></p>
       </div>
 
-      <div id="mind" class="circle grow targetBubbles">
+      <div id="mind" class="circle grow targetBubbles img">
         <p><a href="mental.html">Mind</a></p>
       </div>
 
-      <section id="random" class="circle grow  targetBubbles">
+      <section id="random" class="circle grow  targetBubbles img">
         <p class="pRandom">Random Generator</p>
       </section>
 
-      <section id="about" class="circle grow targetBubbles">
+      <section id="about" class="circle grow targetBubbles img">
         <p class="pAbout"><a href="aboutus.html">About</a></p>
       </section>
 
-      <section id="username" class="circle grow  targetBubbles">
+      <section id="username" class="circle grow  targetBubbles img">
         <p class="pUsername">Welcome</p>
       </section>
 
