Made bubble styling and fonts consistent between pages

--- a/aboutus.html
+++ b/aboutus.html
@@ -17,20 +17,20 @@
 
 
     <!-- Edgar needs LinkedIn Link  -->
-    <div class="formatCircle fade grow targetBubbles"><a class="" href="https://www.linkedin.com">Edgar</a></div>
+    <div class="formatCircle fade grow targetBubbles img"><a class="" href="https://www.linkedin.com">Edgar</a></div>
 
-    <div class="formatCircle fade grow targetBubbles"><a class=""
+    <div class="formatCircle fade grow targetBubbles img"><a class=""
         href="https://www.linkedin.com/in/courtneycodes/">Courtney</a>
     </div>
 
-    <div class="formatCircle fade grow targetBubbles"><a class=""
+    <div class="formatCircle fade grow targetBubbles img"><a class=""
         href="https://www.linkedin.com/in/sarahshatto/">Sarah</a>
     </div>
 
-    <div class="formatCircle fade grow targetBubbles"><a class=""
+    <div class="formatCircle fade grow targetBubbles img"><a class=""
         href="https://www.linkedin.com/in/spencer-rhodes-23588a80/">Spencer</a></div>
 
-    <div><a href="index.html" class="home fade grow targetBubbles">Home</a></div>
+    <div><a href="index.html" class="home fade grow targetBubbles img">Home</a></div>
 
   </main>
 </body>
