--- a/mental.html
+++ b/mental.html
@@ -15,9 +15,9 @@
 
   </header>
   <main>
-    <div class="mental">Mind</div>
-    <div class="home targetBubbles"><a href="index.html">Home</a></div>
-    <div class="content targetBubbles" id="activity-container"></div>
+    <div class="mental img">Mind</div>
+    <div class="home targetBubbles img"><a href="index.html">Home</a></div>
+    <div class="content targetBubbles img" id="activity-container"></div>
   </main>
   <footer>
 
