--- a/nutrition.html
+++ b/nutrition.html
@@ -15,9 +15,9 @@
 
   </header>
   <main>
-    <div class="nourish">Nourish</div>
-    <div class="home targetBubbles"><a href="index.html">Home</a></div>
-    <div class="content targetBubbles" id="activity-container"></div>
+    <div class="nourish img">Nourish</div>
+    <div class="home targetBubbles img"><a href="index.html">Home</a></div>
+    <div class="content targetBubbles img" id="activity-container"></div>
   </main>
   <footer>
 
