--- a/physical.html
+++ b/physical.html
@@ -15,10 +15,10 @@
 
   </header>
   <main>
-    <div class="body">Body</div>
-    <div class="home targetBubbles"><a href="index.html">Home</a></div>
+    <div class="body img">Body</div>
+    <div class="home targetBubbles img"><a href="index.html">Home</a></div>
     <!-- id name must not change for JS code  -->
-    <div class="content targetBubbles" id="activity-container"></div>
+    <div class="content targetBubbles img" id="activity-container"></div>
   </main>
   <footer>
 
