--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
       </div>
 
       <section id="random" class="circle grow  targetBubbles img">
-        <p class="pRandom">Random Generator</p>
+        <p class="pRandom"> <a href="."> Random</a></p>
       </section>
 
       <section id="about" class="circle grow targetBubbles img">
-        <p class="pAbout"><a href="aboutus.html">About</a></p>
+        <p class="pAbout">About</p>
       </section>
 
       <section id="username" class="circle grow  targetBubbles img">
@@ -50,6 +50,7 @@
   <script src="/objects/quotes.json"></script>
   <script src="/js/main.js"></script>
   <script src="/js/quotes.js"></script>
+  <script src="/js/randomlink.js"></script>
 </body>
 
 </html>
