put anchor tag on wrong element, just fixed it. Random bubble works now.

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
       </div>
 
       <section id="random" class="circle grow  targetBubbles img">
-        <p class="pRandom"> <a href="."> Random</a></p>
+        <p class="pRandom"> <a href="javascript:void(0)"> Random</a></p>
       </section>
 
       <section id="about" class="circle grow targetBubbles img">
-        <p class="pAbout">About</p>
+        <p class="pAbout"><a href="aboutus.html">About</a></p>
       </section>
 
       <section id="username" class="circle grow  targetBubbles img">
