hover states in activity pages

--- a/nutrition.html
+++ b/nutrition.html
@@ -16,8 +16,8 @@
   </header>
   <main>
     <div class="nourish img">Nourish</div>
-    <div class="home targetBubbles img"><a href="index.html">Home</a></div>
-    <div class="content targetBubbles img" id="activity-container"></div>
+    <div class="home targetBubbles img grow"><a href="index.html">Home</a></div>
+   <a href=""><div class="content targetBubbles img" id="activity-container"></div></a>
   </main>
   <footer>
 
