--- a/physical.html
+++ b/physical.html
@@ -16,7 +16,7 @@
   </header>
   <main>
     <div class="body img">Body</div>
-    <div class="home targetBubbles img"><a href="index.html">Home</a></div>
+    <div class="home targetBubbles img grow"><a href="index.html">Home</a></div>
     <!-- id name must not change for JS code  -->
     <div class="content targetBubbles img" id="activity-container"></div>
   </main>
