more bubbles for background set up

--- a/aboutus.html
+++ b/aboutus.html
@@ -5,8 +5,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/css/reset.css" type="text/css" />
+  <link rel="stylesheet" href="/css/background.css" type="text/css" />
   <link rel="stylesheet" href="/css/aboutus.css" type="text/css" />
   <link rel="stylesheet" href="/css/transition.css" type="text/css" />
+
+
+
   <title>Developers</title>
 </head>
 
@@ -33,6 +37,36 @@
     <div><a href="index.html" class="home fade grow targetBubbles img">Home</a></div>
 
   </main>
+  <footer>
+    <ul class="bubbles">
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+    </ul>
+  </footer>
 </body>
 <script src="/js/app.js"></script>
 
