--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="/css/reset.css" type="text/css" />
   <link rel="stylesheet" href="/css/style.css" type="text/css" />
   <link rel="stylesheet" href="/css/transition.css" type="text/css" />
+  <link rel="stylesheet" href="/css/background.css" type="text/css" />
   <title>15 Minutes</title>
 </head>
 
@@ -47,6 +48,36 @@
 
     </div>
   </main>
+  <footer>
+    <ul class="bubbles">
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+    </ul>
+  </footer>
   <script src="/objects/quotes.json"></script>
   <script src="/js/main.js"></script>
   <script src="/js/quotes.js"></script>
