added background bubbles

--- a/nutrition.html
+++ b/nutrition.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="/css/reset.css" type="text/css" />
   <link rel="stylesheet" href="/css/nourish.css" type="text/css" />
   <link rel="stylesheet" href="/css/transition.css" type="text/css" />
+  <link rel="stylesheet" href="/css/background.css" type="text/css" />
+
   <title>Nutrition</title>
 </head>
 
@@ -20,6 +22,34 @@
    <a href=""><div class="content targetBubbles img" id="activity-container"></div></a>
   </main>
   <footer>
+    <ul class="bubbles">
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+    </ul>
 
   </footer>
 </body>
