--- a/physical.html
+++ b/physical.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="/css/reset.css" type="text/css" />
   <link rel="stylesheet" href="/css/body.css" type="text/css" />
   <link rel="stylesheet" href="/css/transition.css" type="text/css" />
+  <link rel="stylesheet" href="/css/background.css" type="text/css" />
   <title>Body</title>
 </head>
 
@@ -21,6 +22,34 @@
     <div class="content targetBubbles img" id="activity-container"></div>
   </main>
   <footer>
+    <ul class="bubbles">
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+    </ul>
 
   </footer>
 </body>
