--- a/mental.html
+++ b/mental.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="/css/reset.css" type="text/css" />
   <link rel="stylesheet" href="/css/mental.css" type="text/css" />
   <link rel="stylesheet" href="/css/transition.css" type="text/css" />
+  <link rel="stylesheet" href="/css/background.css" type="text/css" />
   <title>Mind</title>
 </head>
 
@@ -20,6 +21,34 @@
     <a href=""><div class="content targetBubbles img" id="activity-container"></div></a>
   </main>
   <footer>
+    <ul class="bubbles">
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+    </ul>
 
   </footer>
 </body>
