--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="/css/reset.css" type="text/css" />
   <link rel="stylesheet" href="/css/style.css" type="text/css" />
   <link rel="stylesheet" href="/css/transition.css" type="text/css" />
-  <link rel="stylesheet" href="/css/background.css" type="text/css" />
+
   <title>15 Minutes</title>
 </head>
 
@@ -16,7 +16,7 @@
 
     <div id="allCirclesContainer">
 
-      <div id="body" class="circle grow targetBubbles img">
+      <div id="body" class="circle grow targetBubbles img wiggle">
         <p><a href="physical.html">Body</a></p>
       </div>
 
@@ -35,7 +35,7 @@
       </div>
 
       <section id="random" class="circle grow  targetBubbles img">
-        <p class="pRandom"> <a href="javascript:void(0)"> Random</a></p>
+        <p class="pRandom">Random Generator</p>
       </section>
 
       <section id="about" class="circle grow targetBubbles img">
@@ -48,40 +48,9 @@
 
     </div>
   </main>
-  <footer>
-    <ul class="bubbles">
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-    </ul>
-  </footer>
   <script src="/objects/quotes.json"></script>
   <script src="/js/main.js"></script>
   <script src="/js/quotes.js"></script>
-  <script src="/js/randomlink.js"></script>
 </body>
 
 </html>
