added my linkedIn profile link

--- a/aboutus.html
+++ b/aboutus.html
@@ -21,7 +21,7 @@
 
 
     <!-- Edgar needs LinkedIn Link  -->
-    <div class="formatCircle fade grow targetBubbles img"><a class="" href="https://www.linkedin.com">Edgar</a></div>
+    <div class="formatCircle fade grow targetBubbles img"><a class="" href="https://www.linkedin.com/in/edgarromero1987/">Edgar</a></div>
 
     <div class="formatCircle fade grow targetBubbles img"><a class=""
         href="https://www.linkedin.com/in/courtneycodes/">Courtney</a>
