--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="/css/reset.css" type="text/css" />
   <link rel="stylesheet" href="/css/style.css" type="text/css" />
   <link rel="stylesheet" href="/css/transition.css" type="text/css" />
+  <link rel="stylesheet" href="/css/background.css" type="text/css" />
 
   <title>15 Minutes</title>
 </head>
@@ -34,9 +35,9 @@
         <p><a href="mental.html">Mind</a></p>
       </div>
 
-      <section id="random" class="circle grow  targetBubbles img">
-        <p class="pRandom">Random Generator</p>
-      </section>
+      <a href="javascript:void(0)"><section id="random" class="circle grow  targetBubbles img">
+        <p class="pRandom">Random</p>
+      </section></a>
 
       <section id="about" class="circle grow targetBubbles img">
         <p class="pAbout"><a href="aboutus.html">About</a></p>
@@ -51,6 +52,37 @@
   <script src="/objects/quotes.json"></script>
   <script src="/js/main.js"></script>
   <script src="/js/quotes.js"></script>
+  <script src="/js/randomlink.js"></script>
 </body>
+<footer>
+  <ul class="bubbles">
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+  </ul>
+</footer>
 
 </html>
