Are you serious right now

--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
 
     </div>
   </main>
-  <script src="/objects/quotes.json"></script>
-  <script src="/js/main.js"></script>
-  <script src="/js/quotes.js"></script>
-  <script src="/js/randomlink.js"></script>
+  <script src="./objects/quotes.json"></script>
+  <script src="./js/main.js"></script>
+  <script src="./js/quotes.js"></script>
+  <script src="./js/randomlink.js"></script>
 </body>
 <footer>
   <ul class="bubbles">
