--- a/mental.html
+++ b/mental.html
@@ -52,8 +52,8 @@
 
   </footer>
 </body>
-<script src="objects/mental.json"></script>
-<script src="/js/main.js"></script>
-<script src="/js/activity.js"></script>
+<script src="./objects/mental.json"></script>
+<script src="./js/main.js"></script>
+<script src="./js/activity.js"></script>
 
 </html>
