--- a/nutrition.html
+++ b/nutrition.html
@@ -53,8 +53,8 @@
 
   </footer>
 </body>
-<script src="objects/nutrition.json"></script>
-<script src="/js/main.js"></script>
-<script src="/js/activity.js"></script>
+<script src="./objects/nutrition.json"></script>
+<script src="./js/main.js"></script>
+<script src="./js/activity.js"></script>
 
 </html>
